syntax = "proto3";

package com.tservice.proto;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service PlaceService {
  rpc createPlace(CreatePlaceProto) returns (PlaceProto);
  rpc updatePlace(UpdatePlaceProto) returns (PlaceProto);
  rpc deletePlace(DeletePlaceProto) returns (google.protobuf.Empty);
  rpc getPlaceById(GetPlaceByIdProto) returns (PlaceProto);
  rpc getAllPlaces(GetAllPlacesProto) returns (stream PlaceProto);
  rpc findPlacesByContextId(FindPlacesByContextIdProto) returns (stream PlaceProto);
  rpc findPlacesByName(FindPlacesByNameProto) returns (stream PlaceProto);
  rpc findPlacesByValue(FindPlacesByValueProto) returns (stream PlaceProto);

}

message PlaceProto {
  string placeId = 1;
  string contextId = 2;
  string name = 3;
  string value = 4;
}

message CreatePlaceProto {
  string contextId = 1;
  string name = 2;
  string value = 3;
}

message UpdatePlaceProto {
  string placeId = 1;
  string contextId = 2;
  string name = 3;
  string value = 4;
}

message DeletePlaceProto {
  string placeId = 1;
}

message GetPlaceByIdProto {
  string placeId = 1;
}

message GetAllPlacesProto {}

message FindPlacesByContextIdProto {
  string contextId = 1;
}

message FindPlacesByContextIdPageProto {
  string contextId = 1;
  int32 page = 2;
  int32 size = 3;
}

message FindPlacesByNameProto {
  string name = 1;
}

message FindPlacesByNamePageProto {
  string name = 1;
  int32 page = 2;
  int32 size = 3;
}

message FindPlacesByValueProto {
  string value = 1;
}
